syntax = "proto3";

package nodehub;

option go_package = "github.com/joyparty/nodehub/proto/nh";

import "google/protobuf/timestamp.proto";
import "google/rpc/status.proto";
import "nodehub/client.proto";

enum ReplyCode {
	UNSPECIFIED = 0;
	RPC_ERROR = 1;
}

// 网关透传grpc请求后，返回的grpc错误
message RPCError {
	// request消息请求的服务
	int32 request_service = 1;

	// request消息请求的方法
	string request_method = 2;

	// 详细错误信息
	google.rpc.Status status = 3;
}

// 用于内部节点主动向客户端发送消息
// 内部节点把消息打包为Multicast，然后push到消息队列
// 网关节点从消息队列中获取Multicast，然后push到客户端
message Multicast {
	// 消息接收者，网关节点根据user_id找到对应的客户端连接
	repeated string receiver = 1;

	// 消息发布时间
	google.protobuf.Timestamp time = 2;

	// 消息内容
	Reply content = 3;

	// 可选，同一个channel的消息会严格按照顺序处理
	string channel = 4;
}
