syntax = "proto3";

package nodehub;

option go_package = "github.com/joyparty/nodehub/proto/nh";

import "google/protobuf/empty.proto";
import "nodehub/client.proto";

// 网关功能接口，供内部服务调用
// 每个网关节点都会自动内置此服务
service Gateway {
	// 会话是否存在
	rpc IsSessionExist (IsSessionExistRequest) returns (IsSessionExistResponse) {}

	// 遍历会话列表
	rpc ListSessions (google.protobuf.Empty) returns (stream Session) {}

	// 会话数量
	rpc SessionCount (google.protobuf.Empty) returns (SessionCountResponse) {}

	// 关闭会话连接，踢下线
	rpc CloseSession (CloseSessionRequest) returns (CloseSessionResponse) {}

	// 修改状态服务路由
	rpc SetServiceRoute (SetServiceRouteRequest) returns (google.protobuf.Empty) {}

	// 删除状态服务路由
	rpc RemoveServiceRoute (RemoveServiceRouteRequest) returns (google.protobuf.Empty) {}

	// 替换状态服务路由节点
	rpc ReplaceServiceRoute (ReplaceServiceRouteRequest) returns (google.protobuf.Empty) {}

	// 向指定会话推送消息
	rpc SendReply (SendReplyRequest) returns (SendReplyResponse) {}
}

message SetServiceRouteRequest {
	int32 service_code = 1;
	string session_id = 2;
	string node_id = 3;
}

message Session {
	message Metadata {
		string key = 1;
		repeated string values = 2;
	}

	string session_id = 1;
	string remote_addr = 2;
	string type = 3;
	repeated Metadata metadata = 4;
}

message RemoveServiceRouteRequest {
	int32 service_code = 1;
	string session_id = 2;
}

message ReplaceServiceRouteRequest {
	string old_node_id = 1;
	string new_node_id = 2;
}

message IsSessionExistRequest {
	string session_id = 1;
}

message IsSessionExistResponse {
	bool exist = 1;
}

message SessionCountResponse {
	int32 count = 1;
}

message SendReplyRequest {
	string session_id = 1;
	Reply reply = 2;
}

message SendReplyResponse {
	// success 为 false 时，表示会话不存在
	bool success = 1;
}

message CloseSessionRequest {
	string session_id = 1;
}

message CloseSessionResponse {
	// success 为 false 时，表示会话不存在
	bool success = 1;
}

// 节点管理接口，供内部服务调用
// 每个内部服务节点都会内置此服务
service Node {
	// 改变节点状态
	rpc ChangeState (ChangeStateRequest) returns (google.protobuf.Empty) {}

	// 关闭服务
	rpc Shutdown (google.protobuf.Empty) returns (google.protobuf.Empty) {}
}

message ChangeStateRequest {
	string state = 1;
}
